@@ -22,5 +22,3 @@ COM_SEARCH_NO_RESULTS="Off"
 COM_SEARCH_SEARCH_IN_PHRASE="Search in phrases."
 COM_SEARCH_SHOW_SEARCH_RESULTS="Show Search Results"
 COM_SEARCH_XML_DESCRIPTION="Component for search functions"
-COM_SEARCH_CONFIG_SHOW_CREATED_DATE_LABEL="Creation Date"
-COM_SEARCH_CONFIG_SHOW_CREATED_DATE_DESC=""
