@@ -12,20 +12,22 @@
 		<!-- Basic options. -->
 		<fieldset name="basic" label="COM_MENUS_BASIC_FIELDSET_LABEL">
 
-			<field name="search_areas" type="radio"
-				default="1"
+			<field name="search_areas" type="list"
+				
 				description="COM_SEARCH_FIELD_SEARCH_AREAS_DESC"
 				label="COM_SEARCH_FIELD_SEARCH_AREAS_LABEL"
 			>
+				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">JNO</option>
 				<option value="1">JYES</option>
 			</field>
 
-			<field name="show_date" type="radio"
-				default="1"
+			<field name="show_date" type="list"
+				
 				description="COM_SEARCH_CONFIG_FIELD_CREATED_DATE_DESC"
 				label="COM_SEARCH_CONFIG_FIELD_CREATED_DATE_LABEL"
 			>
+				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">JHIDE</option>
 				<option value="1">JSHOW</option>
 			</field>
