@@ -141,7 +141,7 @@ class SearchViewSearch extends JView
 
 				$result = &$results[$i];
 				if ($result->created) {
-					$created = JHTML::_('date',$result->created);
+					$created = JHTML::_('date',$result->created, JText::_('DATE_FORMAT_LC3'));
 				}
 				else {
 					$created = '';
