@@ -131,6 +131,7 @@ JGLOBAL_AUTH_USER_NOT_FOUND="Unable to find user"
 JGLOBAL_AUTO="Auto"
 JGLOBAL_CATEGORY_NOT_FOUND="Category not found"
 JGLOBAL_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
+JGLOBAL_CREATED_DATE_ON="Created on %s"
 JGLOBAL_DESCRIPTION="Description"
 JGLOBAL_DISPLAY_NUM="Display #"
 JGLOBAL_EDIT="Edit"
